--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,14 @@
         for="large"
         >Large</label
       ><br />
+      <input type="radio" name="size" id="xlarge" value="xlarge" /><label
+        for="xlarge"
+        >XLarge</label
+      ><br />
+      <input type="radio" name="size" id="xxlarge" value="xxlarge" /><label
+        for="xxlarge"
+        >XXLarge</label
+      ><br />
 
       <h2>Select Toppings</h2>
       <input type="checkbox" name="toppings" id="pepperoni" value="pepperoni" />
